Adds support for dynamic types